will this fix the button text and make it center properly on mobile? i can but hope!

--- a/vtn.css
+++ b/vtn.css
@@ -31,7 +31,6 @@ button {
 	border-color: black;
 	margin-bottom: 5%;
 	margin-top: 1em;
-	text-align: center;
 }
 button:hover {
 	background-color: black;
